# bnjbvr-peerchat-gh-mirror

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  release.sh
client/: package-lock.json  package.json  rollup.config.js
client/locales/: en.json  fr.json
client/public/: index.html
client/src/: About.svelte  App.svelte  Comments.svelte  Home.svelte  LanguageSelector.svelte  NicknameField.svelte  Room.svelte  backend.ts  hashHistory.ts  i18n.ts  room-url.ts  stores.ts  toast.ts
server/: Cargo.toml
server/src/: main.rs
